--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,16 @@
 .scrollbar-hide::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
+
+.zoom-in {
+    animation: zoom-in 0.5s;
+}
+
+@keyframes zoom-in {
+    from {
+        transform: scale(0.5);
+    }
+    to {
+        transform: scale(1);
+    }
+}
